--- a/package.json
+++ b/package.json
@@ -14,12 +14,9 @@
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.0.1",
     "rimraf": "^6.0.1",
-    "spawn-rx": "^4.0.0",
-    "n8n": "^1.29.1",
-    "crypto-js": "^4.2.0"
+    "spawn-rx": "^4.0.0"
   },
   "devDependencies": {
-    "@types/crypto-js": "^4.2.2",
     "shx": "^0.3.4",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.3"
