Update package.json with @types/node dependency

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "spawn-rx": "^4.0.0"
   },
   "devDependencies": {
+    "@types/node": "^20.9.0",
     "shx": "^0.3.4",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.3"
